fix(clash): fix card preview on small screens in 3p layout

--- a/clash/components/Game/Menu/Chat/CardPreview/CardPreview.module.css
+++ b/clash/components/Game/Menu/Chat/CardPreview/CardPreview.module.css
@@ -20,8 +20,9 @@
 }
 
 .image {
-    height: 90%;
+    max-height: 90%;
     width: max-content;
+    max-width: 90%;
     margin: 0 auto;
     border-radius: 4%;
     /* above mulligan modal */
